--- a/GTK/calculator.glade
+++ b/GTK/calculator.glade
@@ -2,13 +2,13 @@
 <!-- Generated with glade 3.22.2 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
-  <object class="GtkWindow">
+  <object class="GtkWindow" id="window">
     <property name="can_focus">False</property>
     <child type="titlebar">
       <placeholder/>
     </child>
     <child>
-      <object class="GtkFixed">
+      <object class="GtkFixed" id="fixed">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <child>
